--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -30,7 +30,7 @@ Obesity is defined as a \gls{bmi} of >30 kg/m^2^ and is a contributing risk fact
 
 ### Hyperuricaemia and gout
 
-Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M\tex{\={a}}ori and Pacific ethnicities have a prevalence of 12% and 14%, respectively, in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013]. While New Zealand M\tex{\={a}}ori and Pacific people have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
+Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M\tex{\={a}}ori and Pacific ethnicities have a prevalence of 12% and 14%, respectively, in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013]. While New Zealand M\tex{\={a}}ori and Pacific people have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Phipps-Green2010; @Hollis-Moffatt2011]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
 
 
 
@@ -63,7 +63,7 @@ Possible types of selection that can act upon a population include balancing, ba
 Directional selection operates in two fashions, positive or negative. Positive selection is where an allele conveys an advantage in fitness that enhances reproductive success, resulting in the beneficial allele increasing in frequency within the population. An example of positive selection is the lactase gene in European populations which enables the absorption of lactose [@Bersaglieri2004]. Negative selection occurs when the allele conveys a fitness disadvantage and ends with reduced reproductive success, decreasing the frequency of the allele in the population. The cystic fibrosis gene _CFTR_, is an example of negative selection, where in males splicing mutations can lead to sterility [@Pagani2005].
 
 
-The way selection can affect allele frequencies can be thought of as a sweep: as an allele is selected, it increases in frequency, “sweeping” through the population. The intensity of this sweep can be classified as, hard, soft, and partial or incomplete. A hard sweep, also known as a classical sweep, is when a beneficial allele rapidly rises in frequency and through hitch-hiking the neutral variation is simultaneously reduced at linked sites, as shown in Figure \@ref(fig:sweepDiagram) [@Hermisson2005;@Hermisson2017; @Nielsen2005; @Smith1974].
+The way selection can affect allele frequencies can be thought of as a sweep: as an allele is selected, it increases in frequency, “sweeping” through the population. The intensity of this sweep can be classified as, hard, soft, and partial or incomplete. A hard sweep, also known as a classical sweep, is when a beneficial allele rapidly rises in frequency and through hitch-hiking the neutral variation is simultaneously reduced at linked sites, as shown in Figure \@ref(fig:sweepDiagram) [@Smith1974; @Hermisson2005; @Nielsen2005; @Hermisson2017].
 
 (ref:sweepDiagram) Representation of alleles before and after a hard sweep.  Each rectangle represents a haplotype within a population. A new mutation is shown in red and neutral alleles are shown in black. After a hard sweep the new mutation becomes fixed in the population, along with the neutral allele that is linked to it.
 
@@ -107,7 +107,7 @@ The HKA test [@Hudson1987] compares between and within populations the polymorph
 
 ### Haplotypic methods
 
-There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation would not solely be selected for, with the surrounding region initially "hitch-hiking" and therefore have a conservation effect. As time and generations progressed, this haplotype would decay due to recombination, and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side constituting the two haplotypes (phasing).
+There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation would not solely be selected for, with the surrounding region initially "hitch-hiking" and therefore it would have a conserving effect. As time and generations progressed, this haplotype would decay due to recombination, and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side constituting the two haplotypes (phasing).
 
 #### Integrated haplotype homozygosity score
 
@@ -179,7 +179,7 @@ F_{ST} = \frac{F_{IT}{-}F_{IS}}{1{-}F_{IS}}
 (\#eq:fst)
 \end{equation}
 
-F~ST~ has been used in multiple studies as evidence for natural selection [@Akey2012; @myles2007identification; @pickrell2009signals]. @Akey2012 used F~ST~ at individual loci and compared this to the distributions for the genome, chromosome and gene levels. The use of the empirical distribution to compare to F~ST~ for each \gls{snp} controlled for the effects of demography. F~ST~ as a method for detecting selection was developed further into d~_i_~, which is a function of pair-wise F~ST~ between population _i_ and the remaining populations [@Akey2010]. Outside of the human context F~ST~ has been a very popular method of reporting both population structure and evidence of selection [@Akey2010; @Hancock2011; @Qanbari2011; @Wei2015b]. The population branching statistic is a F~ST~ based statistic that involves the use of an out-group to compare estimates in divergence time between populations [@Yi2010b].
+F~ST~ has been used in multiple studies as evidence for natural selection [@myles2007identification; @pickrell2009signals; @Akey2012]. @Akey2012 used F~ST~ at individual loci and compared this to the distributions for the genome, chromosome and gene levels. The use of the empirical distribution to compare to F~ST~ for each \gls{snp} controlled for the effects of demography. F~ST~ as a method for detecting selection was developed further into d~_i_~, which is a function of pair-wise F~ST~ between population _i_ and the remaining populations [@Akey2010]. Outside of the human context F~ST~ has been a very popular method of reporting both population structure and evidence of selection [@Akey2010; @Hancock2011; @Qanbari2011; @Wei2015b]. The population branching statistic is a F~ST~ based statistic that involves the use of an out-group to compare estimates in divergence time between populations [@Yi2010b].
 
 <!-- #### Population branching statistic -->
 
@@ -223,7 +223,7 @@ Composite of selection signals (CSS) is similar to meta-analysis of multiple tes
 
 ### Power
 
-Power to detect selected sites can be very limited if the site is not an outlier from empirical methods, such as simulations or using permutations of the data, as they would not 'stand out' [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
+Power to detect selected sites can be very limited if the site is not an outlier from empirical methods, such as simulations or using permutations of the data, as they would not 'stand out' [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2011; @Bhatia2013a]
 
 Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have the best power for detecting moderately ancestral severe bottlenecks [@Depaulis2003], whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008]. Assessment of power to detect selection has previously been done through simulation or the use of well established loci as positive controls [@voight2006map;@Zhai2009;@Cadzow2016]. When simulating, it important to generate scenarios that include different demographic events as well as selection events. Simulated models are generally done in one of three ways, as a coalescent model, or a forward-in-time model, or by resampling [@Yuan2012]. The coalescent model (and most commonly used) works backwards-in-time to find the most recent common ancestor, and then permutes through models to arrive at the current state [@kingman_genealogy_1982;@Yuan2012]. The forward-in-time simulations will take a starting ancestral population and then apply a population model, iterating through subsequent generations [@peng_forward-time_2010;@Yuan2012]. Another approach can be to take the observed data and shuffle and resample it to generate empirical distributions. From each of these methods false positive and false negative rates can be calculated.
 
@@ -242,7 +242,7 @@ In order to use haplotypic methods, (re)construction of haplotypes is required. 
 
 ## Improving GWAS
 
-\Gls{gwas} is a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. Association is usually tested between a trait and a single \gls{snp} using either linear regression (continuous variable) or logistic regression (binomial variable), with confounders included where possible as covariates to the models. These association tests are repeated for each \gls{snp} across the genome (for a comprehensive explanation of \gls{gwas} methods see @bush_chapter_2012). Commonly an additive model is used for the \gls{snp}. The strength of \gls{gwas} is that prior knowledge of loci is not required and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
+\Gls{gwas} is a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. Association is usually tested between a trait and a single \gls{snp} using either linear regression (continuous variable) or logistic regression (binomial variable), with confounders included where possible as covariates to the models. These association tests are repeated for each \gls{snp} across the genome (for a comprehensive explanation of \gls{gwas} methods see @bush_chapter_2012). Commonly an additive model is used for the \gls{snp}. The strength of \gls{gwas} is that prior knowledge of loci is not required and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Hemani2013; @Korte2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Roeder2006; @Ayodo2007]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
 
 The basis of \gls{gwas} studies is to identify \glspl{snp} that are associated with differences in the mean of a trait. These studies do not necessarily identify the causal \gls{snp} but instead identify a marker for the causal variant, usually in \gls{ld}. @Fisher1919 showed that total genetic variance could be split into components of additive, dominance and epistatic effects. The additive component has been shown to contribute the most to the overall genetic variance, with epistatic variance contributing little in an outbred population [@Hill2008]. Complex traits gain their complexity from being the sum of interactions from many small effect loci, or the product of non-additive interactions between loci and the environment, making it challenging to find the exact contribution of a locus to a trait [@Fu2013a]. These small, true effect loci can end up non-significant due to the noise in the data but might be  retrieved using methods that find non-additive effects. 
 
@@ -275,9 +275,9 @@ A biological pathway is a dependency graph detailing the genes or proteins invol
 
 ### Genome-wide selection
 
-Genome-wide selection in humans has been investigated by @sabeti2006positive, @pickrell2009signals,@voight2006map, @Hancock2008, the 1000 Genomes Project Consortium [@1KGP2010;@1KGP2012;@1KGP2015snp], @Grossman2010, @Colonna2014, and @Mallick2016. The population datasets used involved the HapMap Project [@Hapmap2005], the Human Genome Diversity Project [@Cann2002; @Rosenburg2002] and the 1000 Genomes Project (populations are defined in section \@ref(datasets); @1KGP2010). The 1000 Genomes Project Consortium [@1KGP2010; @1KGP2012; @1KGP2015snp] reported genome wide diversification between main population groups based on F~ST~ and \gls{ddaf}. Genome wide mean F~ST~ was found to only be a maximum of 8%, indicating overall little genetic differentiation between populations, however several thousand SNPs had large F~ST~ indicating local population adaptation [@1KGP2010]. The analysis also found 139 non-synonymous SNPs with large frequency differences between populations. Investigation of the \gls{1kgp} data set was also performed by @Colonna2014. Using \gls{ddaf}, it was found that sites of high population differentiation (\gls{ddaf} > 0.7 between and > 0.25 within continents) clustered together, the same was found for sites of low differentiation. Genes containing highly differentiated sites were likely to also have additional evidence of positive selection in a third. There was also a strong association of highly differentiated sites with genes and gene regulatory elements.
+Genome-wide selection in humans has been investigated by @sabeti2006positive, @voight2006map, @Hancock2008, @pickrell2009signals, the 1000 Genomes Project Consortium [@1KGP2010;@1KGP2012;@1KGP2015snp], @Grossman2010, @Colonna2014, and @Mallick2016. The population datasets used involved the HapMap Project [@Hapmap2005], the Human Genome Diversity Project [@Cann2002; @Rosenburg2002] and the 1000 Genomes Project (populations are defined in section \@ref(datasets); @1KGP2010). The 1000 Genomes Project Consortium [@1KGP2010; @1KGP2012; @1KGP2015snp] reported genome wide diversification between main population groups based on F~ST~ and \gls{ddaf}. Genome wide mean F~ST~ was found to only be a maximum of 8%, indicating overall little genetic differentiation between populations, however several thousand SNPs had large F~ST~ indicating local population adaptation [@1KGP2010]. The analysis also found 139 non-synonymous SNPs with large frequency differences between populations. Investigation of the \gls{1kgp} data set was also performed by @Colonna2014. Using \gls{ddaf}, it was found that sites of high population differentiation (\gls{ddaf} > 0.7 between and > 0.25 within continents) clustered together, the same was found for sites of low differentiation. Genes containing highly differentiated sites were likely to also have additional evidence of positive selection in a third. There was also a strong association of highly differentiated sites with genes and gene regulatory elements.
 
-Metabolic syndrome and gout have associations and interactions with genes in metabolic pathways and the immune system [@Osborn2012]. The categories of genes that have displayed evidence of selection from the previously mentioned genome-wide selection scans include: metabolism of sugars [@tang2007new; @voight2006map], drug metabolism [@tang2007new], immune system [@Grossman2010; @tang2007new], and climate adaptation [@Hancock2008]. Genes that play a role in adaptation to climate extremes are likely to play a role in metabolic disorders that make up metabolic syndrome [@Hancock2008]. In contrast, variation in metabolic related genes can lead to elite phenotypes in athletes, showing that metabolic genes also impact on fitness [@Ahmetov2009a].
+Metabolic syndrome and gout have associations and interactions with genes in metabolic pathways and the immune system [@Osborn2012]. The categories of genes that have displayed evidence of selection from the previously mentioned genome-wide selection scans include: metabolism of sugars [@voight2006map;@tang2007new], drug metabolism [@tang2007new], immune system [@tang2007new; @Grossman2010], and climate adaptation [@Hancock2008]. Genes that play a role in adaptation to climate extremes are likely to play a role in metabolic disorders that make up metabolic syndrome [@Hancock2008]. In contrast, variation in metabolic related genes can lead to elite phenotypes in athletes, showing that metabolic genes also impact on fitness [@Ahmetov2009a].
 
 #### Selection in Polynesia
 
@@ -291,7 +291,7 @@ A few candidate-genes for selection which also have been associated with obesity
 ### Selection of metabolic syndrome and urate {#goutMetSyn}
 
 
-The genetic influence of urate and gout is found in the under-excretion of serum urate. There are 28 loci that have been identified as having a role in hyperuricaemia and gout, of which, two (_ABCG2_ and _SLC2A9_) are responsible 3.4% of the variability of urate [@Kottgen2013]. _SLC2A9_ encodes a urate transporter expressed on both the apical and baso-lateral membranes in the proximal tubule of the kidney and reabsorbs urate [@Mandal2015]. _ABCG2_ encodes an ATP powered urate transporter and is responsible for urate excretion mostly in the gut [@Maliepaard2001; @Mandal2015]. Twenty-six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranges from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
+The genetic influence of urate and gout is found in the under-excretion of serum urate. There are 28 loci that have been identified as having a role in hyperuricaemia and gout, of which, two (_ABCG2_ and _SLC2A9_) are responsible 3.4% of the variability of urate [@Kottgen2013]. _SLC2A9_ encodes a urate transporter expressed on both the apical and baso-lateral membranes in the proximal tubule of the kidney and reabsorbs urate [@Mandal2015]. _ABCG2_ encodes an ATP powered urate transporter and is responsible for urate excretion mostly in the gut [@Maliepaard2001; @Mandal2015]. Twenty-six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranges from 40 - 70% [@Yang2005;@Nath2007]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
 
 <!-- Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003]. -->
 
