--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -37,7 +37,7 @@ In this chapter I investigate regions of the genome that exhibit signatures of s
 <!-- Much of the early work in looking at selection was focused at the gene level [@Wright1951;@Fisher] and the methods that were developed were intended for few loci, or limited sequence from a single region [@ref;@ref;@ref]. This was largely due to the high cost and limited availability of whole genome chip or sequence data. It wasn't until after the completion of the human genome project in 2001 and the advent of 'next generation sequencing' where the cost of full genome data rapidly dropped and there became an abundance of whole genome sequence data [@ref]. -->
 At the turn of the millennium the draft reference human genome was released [@Lander2001]. Following from this, there were a number of large projects to characterise human variation and diversity. The first project was the HapMap project [@Hapmap2005] and was based on \gls{snp} array data. This was followed by the 1000 Genomes Project [@1KGP2010; @1KGP2012; @1KGP2015snp] which was the first large project to be based on whole-genome (re)sequence data. Alongside these variation projects were a few projects that aimed to focus on the genomic diversity of humans, such as the Human Genome Diversity Project [@Cann2002; @Rosenburg2002], and later the Simons Genome Diversity Project [@Mallick2016]. 
 
-Over the last decade there has been a steady flow of studies on genome-wide selection [@voight2006map; @sabeti2006positive; @Coop2009; @tang2007new; @pickrell2009signals; @Grossman2010]. The main population samples for this have been part of the 1000 Genomes Project, which sampled over 2500 individuals for full genome (re)sequencing from five 'super' population groups [@1KGP2015snp]. The five super populations cover each of the geographical regions of Africa, Europe, East Asia, South Asia, and the Americas. This dataset, while capturing a large representation of the human population variation, does not have representation for the populations of Polynesia. 
+Over the last decade there has been a steady flow of studies on genome-wide selection [@sabeti2006positive; @voight2006map; @tang2007new; @Coop2009; @pickrell2009signals; @Grossman2010]. The main population samples for this have been part of the 1000 Genomes Project, which sampled over 2500 individuals for full genome (re)sequencing from five 'super' population groups [@1KGP2015snp]. The five super populations cover each of the geographical regions of Africa, Europe, East Asia, South Asia, and the Americas. This dataset, while capturing a large representation of the human population variation, does not have representation for the populations of Polynesia. 
 
 
 ### Positive selection
@@ -50,7 +50,7 @@ More recently there have been studies that have looked at selection in Polynesia
 
 #### Thrifty gene hypothesis
 
-The "Thrifty genotype hypothesis" was originally hypothesised by @Neel1962, whereby it was posed there must be a genetic advantage to a disease, given what should be a strong selection pressure against it, for it to continue to have a high prevalence - referring to diabetes. In the Polynesian context, this hypothesis has been invoked in an attempt to explain the higher prevalence of metabolic related diseases such as \gls{t2d} and obesity [@Myles2011; @Minster2016]. However, there are several refutations of the thrifty genotype for Polynesian populations as fitting a particular narrative [@Cadzow2016; @Gosling2014; @Gosling2015]. An alternative to the 'thrifty-gene' hypothesis is that the link between metabolic diseases and the innate immune system, susceptibility of populations to metabolic disease might be due to selective pressure from infectious disease, such as malaria [@Gosling2015]. Uricase, the enzyme for metabolising urate, was lost through multiple mutations - a reduction in promoter activity followed by two further loss of function mutations and occurred before the divergence of humans from the great apes [@Kratzer2014]. The evolutionary history of uricase however has also been described as "the original thrifty-gene" [@Kratzer2014].
+The "Thrifty genotype hypothesis" was originally hypothesised by @Neel1962, whereby it was posed there must be a genetic advantage to a disease, given what should be a strong selection pressure against it, for it to continue to have a high prevalence - referring to diabetes. In the Polynesian context, this hypothesis has been invoked in an attempt to explain the higher prevalence of metabolic related diseases such as \gls{t2d} and obesity [@Myles2011; @Minster2016]. However, there are several refutations of the thrifty genotype for Polynesian populations as fitting a particular narrative [ @Gosling2014; @Gosling2015; @Cadzow2016]. An alternative to the 'thrifty-gene' hypothesis is that the link between metabolic diseases and the innate immune system, susceptibility of populations to metabolic disease might be due to selective pressure from infectious disease, such as malaria [@Gosling2015]. Uricase, the enzyme for metabolising urate, was lost through multiple mutations - a reduction in promoter activity followed by two further loss of function mutations and occurred before the divergence of humans from the great apes [@Kratzer2014]. The evolutionary history of uricase however has also been described as "the original thrifty-gene" [@Kratzer2014].
 
 ### Selection in urate and gout
 
@@ -77,7 +77,7 @@ knitr::include_graphics("images/03_selectionpipeline/urate_excretion_diagram.png
 
 (ref:urateTransporters) Diagram representing the urate transporters in the gut (entrocyte) and kidney (renal proximal tubule cell). Direction of urate movement is indicated by arrows. Adapted from @Major2018.
 
-From previous studies there is prior evidence of selection at urate associated loci [@Zhang2013a; @Grossman2013; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population was reported as having been selected. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the urate-associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of hyperuricaemia also show signs of selection, with loci associated with \gls{t2d} having been reported as having undergone selection [@pickrell2009signals; @voight2006map; @Grossman2010; @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
+From previous studies there is prior evidence of selection at urate associated loci [@Grossman2013; @Zhang2013a; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population was reported as having been selected. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the urate-associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of hyperuricaemia also show signs of selection, with loci associated with \gls{t2d} having been reported as having undergone selection [ @voight2006map; @pickrell2009signals; @Grossman2010; @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
 
 <!-- need to reword as too many used of "has evidence"-->
 
@@ -1235,7 +1235,7 @@ consec_lower_regions %>% filter( pop == 'CIM') %>% inner_join(., bind_rows(sig_i
 
 ##### Genome-wide selection from haplotypic statistics in \gls{cim}.
 
-The significant \gls{ihs} and \gls{nsl} values after conversion to a P-value are shown by position across the genome as a Manhattan plot in Figure \@ref(fig:cimHapMan). The conversion of the \gls{ihs} or \gls{nsl} value to a P value used 1 - P(|Z|), where Z was the \gls{ihs} or \gls{nsl} value, due to the similarity of the \gls{ihs} and \gls{nsl} to a Z-score. The most extreme markers for \gls{ihs} (by genomic position, -log~10~(P) > 4.8) were chr2: rs11683451, rs2890456, and rs6755308; chr4: rs17060079; chr8: rs2319924; chr11: rs7931930 and rs11212617; chr20: rs647518; chr21: rs28559700.  The most extreme markers for \gls{nsl} (by genomic position, -log~10~(P) > 4.8) were chr4: rs1491411; chr11: rs543215 and rs1963626; chr12: rs7977414. Within the most extreme 100 \gls{ihs} values, there were 37 genes. For \gls{nsl} there was 45 genes. Eighteen of these genes were in common, with _C11orf65_ and _CNTN4_ having at least five significant \glspl{snp} each. The gene with the most significant \glspl{snp} out of any population was _CNTN4_ in \gls{cim} with 27 markers having a significant \gls{ihs} score. The only other population with more than two significant \glspl{snp} was \gls{nzm} with 14. There were four genes represented in the top 100 markers that were associated with obesity or \gls{t2d}, these were: _ADCY9_, _ARL15_, _PSMD6_, and _ZFAND6_. In total there were `r sig_ihs_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{cim} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop !="CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. There were 57 genes that had at least 20 populations with significant markers for \gls{xpehh} in only \gls{cim} from the Polynesian populations. _ARL15_ was associated with obesity and \gls{t2d} [@shungin2015genetic; @mahajan2014genome] and _RREB1_ was associated with \gls{t2d} and urate [@mahajan2014genome; @Kottgen2013]. 
+The significant \gls{ihs} and \gls{nsl} values after conversion to a P-value are shown by position across the genome as a Manhattan plot in Figure \@ref(fig:cimHapMan). The conversion of the \gls{ihs} or \gls{nsl} value to a P value used 1 - P(|Z|), where Z was the \gls{ihs} or \gls{nsl} value, due to the similarity of the \gls{ihs} and \gls{nsl} to a Z-score. The most extreme markers for \gls{ihs} (by genomic position, -log~10~(P) > 4.8) were chr2: rs11683451, rs2890456, and rs6755308; chr4: rs17060079; chr8: rs2319924; chr11: rs7931930 and rs11212617; chr20: rs647518; chr21: rs28559700.  The most extreme markers for \gls{nsl} (by genomic position, -log~10~(P) > 4.8) were chr4: rs1491411; chr11: rs543215 and rs1963626; chr12: rs7977414. Within the most extreme 100 \gls{ihs} values, there were 37 genes. For \gls{nsl} there was 45 genes. Eighteen of these genes were in common, with _C11orf65_ and _CNTN4_ having at least five significant \glspl{snp} each. The gene with the most significant \glspl{snp} out of any population was _CNTN4_ in \gls{cim} with 27 markers having a significant \gls{ihs} score. The only other population with more than two significant \glspl{snp} was \gls{nzm} with 14. There were four genes represented in the top 100 markers that were associated with obesity or \gls{t2d}, these were: _ADCY9_, _ARL15_, _PSMD6_, and _ZFAND6_. In total there were `r sig_ihs_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_ihs_val %>% filter(pop != "CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` genes that were only significant in \gls{cim} for \gls{ihs}, and `r sig_nsl_val %>% filter(pop == "CIM") %>% select(genename) %>% anti_join(., sig_nsl_val %>% filter(pop !="CIM") %>% select(genename), by = 'genename') %>% distinct() %>% NROW()` for \gls{nsl}. There were 57 genes that had at least 20 populations with significant markers for \gls{xpehh} in only \gls{cim} from the Polynesian populations. _ARL15_ was associated with obesity and \gls{t2d} [@mahajan2014genome; @shungin2015genetic] and _RREB1_ was associated with \gls{t2d} and urate [@Kottgen2013; @mahajan2014genome]. 
 
 (ref:cimHapMan) Manhattan plot for significant markers in \gls{cim} for both \gls{ihs} and \gls{nsl}.
 
@@ -3199,9 +3199,9 @@ As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the 
 ### Selection in malaria associated loci in Polynesian populations
 
 
-Malaria is endemic in the southwest Pacific, extending out to the east as far as Vanuatu, with evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania [@Clark1993]. Malaria is absent, and always has been further west into Polynesia, Polynesian ancestors would have passed through Near Oceania prior to settlement of the Pacific [@Clark1993]. In Polynesia, even though malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies, though generally in island groups where malaria remains extant [@Cappellini2008;@Flint1986].
+Malaria is endemic in the southwest Pacific, extending out to the east as far as Vanuatu, with evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania [@Clark1993]. Malaria is absent, and always has been further west into Polynesia, Polynesian ancestors would have passed through Near Oceania prior to settlement of the Pacific [@Clark1993]. In Polynesia, even though malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies, though generally in island groups where malaria remains extant [@Flint1986;@Cappellini2008].
 
-Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. This involves precipitated urate being released from ruptured infected erythrocytes, triggering an immune response [@GallegoDelgado2014;@orengo_uric_2009]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. 
+Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. This involves precipitated urate being released from ruptured infected erythrocytes, triggering an immune response [@orengo_uric_2009; @GallegoDelgado2014]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. 
 
 The blood antigen ABO has a higher susceptibility to malaria in the A, B, or AB antigen groups, than O [@Zerihun2011]. This has led to the formulation of a potential mechanism of cytoadherence through infected red blood cells expressing PfEMP-1 and binding to the A or B antigens on other red blood cells, enabling further infection [@Cserti2015]. There is an increasing gradient of A-type antigen from west to east in the Pacific, with populations in Melanesia having some of the lowest frequencies, whereas, within Polynesia, Western Polynesian populations have lower frequencies than Eastern Polynesian populations [@Simmons1962]. This could suggest that areas with endemic malaria have a maintained selective pressure against the A-type antigen.
 
@@ -3251,9 +3251,9 @@ One of the limitations of using the \gls{gwas} catalog to create gene lists for 
 
 The first objective of this chapter was to investigate regions of the genome that had evidence of selection in Polynesian populations. The main result regarding this objective was that the pathways that were enriched by genes that displayed signatures of selection in Polynesian populations from the genome-wide analysis were dominated by metabolic pathways. Of these pathways, calcium transport and signalling was a central theme for the genes that showed evidence of possible positive selection in Polynesian populations.   
 
-The second objective of the chapter was to investigate regions that had a previous association with urate, gout, and associated co-morbidities. The results regarding this objected showed there was indeed evidence indicative of selection in urate-associated loci in the Polynesian populations. The evidence however was not specific to urate. This was shown by the fact that there was little signal of selection appearing at the urate transporters themselves, but at the loci that were part of more general pathways. There was also evidence of selection at other loci that were associated with the co-morbidities, but again the signals were in genes that were for general cell functions, rather than specific for the particular traits.  The reasons for why there would be selection still remain unclear but response to pathogenic challenge such as malaria in the case of urate is a potential mechanism. 
+The second objective of the chapter was to investigate regions that had a previous association with urate, gout, and associated co-morbidities. The results regarding this objective showed there was indeed evidence indicative of selection in urate-associated loci in the Polynesian populations. The evidence however was not specific to urate. This was shown by the fact that there was little signal of selection appearing at the urate transporters themselves, but at the loci that were part of more general pathways. There was also evidence of selection at other loci that were associated with the co-morbidities, but again the signals were in genes that were for general cell functions, rather than specific for the particular traits.  The reasons for why there would be selection still remain unclear but response to pathogenic challenge such as malaria in the case of urate is a potential mechanism. 
 
-The analysis had limiting factors with the main data using markers that originated from a \gls{snp} array, and the ascertainment bias this introduced to the statistics, especially for those dependant on the low-frequency variants. A second limiting factor was the use of empirical thresholds which will increase the number false-positives. Both of these factors should temper the conclusion of selection or lack thereof, at the loci investigated.
+The analysis had limiting factors with the main data using markers that originated from a \gls{snp} array, and the ascertainment bias this introduced to the statistics, especially for those dependent on the low-frequency variants. A second limiting factor was the use of empirical thresholds which will increase the number false-positives. Both of these factors should temper the conclusion of selection or lack thereof, at the loci investigated.
 
 
 
