--- a/06-Conclusion_discussions.Rmd
+++ b/06-Conclusion_discussions.Rmd
@@ -85,7 +85,7 @@ Chapter 5 investigated the use of gout definitions that were common amongst mult
 
 Investigations of selection in different populations have yielded several population-specific genetic adaptations. Some examples of adaptations with evidence of selection include lactase in European populations [@Bersaglieri2004], pigmentation in South Asian populations [@Jonnalagadda2017], altitude adaptations in Tibetans [@Huerta-Sanchez2014], adaptations to climate in Greenlanders [@Fumagalli2015], and most recently adaptations for diving in the Bajau people [@Ilardo2018]. 
 
-The health disparities that affect Polynesian populations, such as the high burden of metabolic diseases like obesity, \gls{t2d}, renal disease, and gout are important to understand and address. Determining the origin of population genetic differences has the potential to lead to new insights for the biological model. Looking at genetic selection can help explain how these population genetic differences came to be. This thesis is the first to conduct a genome-wide scan for regions of genetic selection, and to identify and characterise selection through a range of selection statistics, in multiple Polynesian populations. The population sample sizes are also some of the largest for Polynesia compared to other studies [@Kimura2008;@Friedlaender2008;@Skoglund2016;@Hudjashov2018]. From these genome-wide selection scans, there was evidence of metabolic pathways being enriched for genes displaying signals of selection. But importantly, the genes that were associated with urate and gout that displayed the most evidence of possible selection, were not urate transporters, but genes that also had associations with other metabolic diseases.  
+The health disparities that affect Polynesian populations, such as the high burden of metabolic diseases like obesity, \gls{t2d}, renal disease, and gout are important to understand and address. Determining the origin of population genetic differences has the potential to lead to new insights for the biological model. Looking at genetic selection can help explain how these population genetic differences came to be. This thesis is the first to conduct a genome-wide scan for regions of genetic selection, and to identify and characterise selection through a range of selection statistics, in multiple Polynesian populations. The population sample sizes are also some of the largest for Polynesia compared to other studies [@Friedlaender2008;@Kimura2008;@Skoglund2016;@Hudjashov2018]. From these genome-wide selection scans, there was evidence of metabolic pathways being enriched for genes displaying signals of selection. But importantly, the genes that were associated with urate and gout that displayed the most evidence of possible selection, were not urate transporters, but genes that also had associations with other metabolic diseases.  
 
 Research into the genetic ancestry of populations, and in particular Polynesian populations is still a current research focus [@Hudjashov2018; @Matisoo-Smith2018]. The research in this thesis (in particular chapter \@ref(clustering)) added to the current knowledge by comparing genome-wide \gls{snp} data and selection statistics, finding there was additional evidence of similarity in ancestry between modern-day Polynesian populations, and modern-day \gls{eas} populations. The regions that showed signs of possible selection had varying degrees of similarity between populations, some were only seen in East or West Polynesian populations, while others had signal that was shared with other populations, with sharing with \gls{eas} being the most common.
 
@@ -109,7 +109,7 @@ Using the \gls{gwas} catalog provided a convenient method to incorporate many of
 
 The technicalities of annotating gene information onto \glspl{snp} and genomic regions can be challenging, especially with regard to annotation of intergenic regions where there might be no clear nearest gene. Consideration also needs to be given to the functional impact of variants on expression, or the effects of regulatory elements such as DNAse hypersensitivity sites. The incorporation of this information was limited, but with new annotation and analysis pipelines being developed [@Ferrero2018], future work will benefit from including these features in the analysis.
 
-Selection is not the only explanation for genetic differences between populations. Other causes, such as random genetic drift, migration, population expansions or bottlenecking can also contribute to these differences. In order to boost the confidence that the signal's that were seen were the result of selection, the analysis would have benefited from population simulations using models that may best explain the population history [@Yuan2012]. Extensions to simulation techniques could include training machine learning algorithms or deep learning on simulated data and applying the model predictions to real data [@Pybus2015;@Schrider2018;@Sheehan2016]
+Selection is not the only explanation for genetic differences between populations. Other causes, such as random genetic drift, migration, population expansions or bottlenecking can also contribute to these differences. In order to boost the confidence that the signal's that were seen were the result of selection, the analysis would have benefited from population simulations using models that may best explain the population history [@Yuan2012]. Extensions to simulation techniques could include training machine learning algorithms or deep learning on simulated data and applying the model predictions to real data [@Pybus2015;@Sheehan2016;@Schrider2018]
 
 <!-- paper about how demography history needs to be taken into account, massive influence of demography and can look similar to selection -->
 
