--- a/references-nourl.bib
+++ b/references-nourl.bib
@@ -1653,7 +1653,7 @@ author = {Alberti, K G and Zimmet, P Z},
 doi = {10.1002/(SICI)1096-9136(199807)15:7<539::AID-DIA668>3.0.CO;2-S},
 file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Alberti, Zimmet - 1998 - Definition, diagnosis and classification of diabetes mellitus and its complications. Part 1 diagnosis and class.pdf:pdf},
 issn = {0742-3071},
-journal = {Diabetic medicine: a journal of the British Diabetic Association},
+journal = {Diabetic Medicine: a Journal of the British Diabetic Association},
 keywords = {Autoimmune Diseases,Blood Glucose,Blood Glucose: analysis,Diabetes Mellitus,Diabetes Mellitus: classification,Diabetes Mellitus: diagnosis,Diabetes Mellitus: etiology,Diabetes, Gestational,Diabetes, Gestational: classification,Diabetes, Gestational: diagnosis,Fasting,Female,Glucose Intolerance,Glucose Tolerance Test,Humans,Insulin Resistance,Islets of Langerhans,Islets of Langerhans: immunology,Islets of Langerhans: pathology,Mutation,Pregnancy,Reference Values,World Health Organization},
 month = {jul},
 number = {7},
@@ -3708,7 +3708,8 @@ journal = {Nature Genetics},
 number = {9},
 title = {{Concepts, estimation and interpretation of SNP-based heritability.}},
 volume = {49},
-year = {2017}
+year = {2017},
+pages = {1304-1311}
 }
 
 @article{Fadista2016,
@@ -3842,7 +3843,7 @@ journal = {IEEE Transactions on Automatic Control},
 number = {6},
 pages = {716--723},
 pmid = {1100705},
-title = {{A New Look at the Statistical Model Identification}},
+title = {A New Look at the Statistical Model Identification},
 volume = {19},
 year = {1974}
 }
