--- a/diseaseGR-12-3-2018.bib
+++ b/diseaseGR-12-3-2018.bib
@@ -1575,7 +1575,7 @@
   pages = {1211-5},
   eprint = {18758464},
   doi = {10.1038/ng.203},
-  archiveprefix = {pubmed},
+  archiveprefix = {pubmed}
 }
 
 @article{liu2008genome,
